corrected skills alignment

--- a/myCSS.css
+++ b/myCSS.css
@@ -182,7 +182,7 @@ img {
 .skills-section {
     display: flex;
     padding-bottom: 15px;
-    width:60%;
+    width:58%;
     margin-left:20%;
     justify-content: space-between;
     
